# CS205-CPP-Proj3

./: CMakeLists.txt  README.md
inc/: kernel.h  matrix.h
report/: figure.py  report.md
src/: benchmark.c  cuda_mm.cu  matrix.c  naive_mm.c  strassen.c  strassen_mm.c
